# kiosk_app_cpp

./: .gitignore  CMakeLists.txt  DEPLOYMENT_CHECKLIST.md  PROJECT_SUMMARY.md  QML_CONVERSION.md  QUICK_START.md  README.md  TESTING_MODES.md  build.sh  install_rpi.sh
include/: AppController.h  AppSettings.h  AutoCrop.h  EmailManager.h  ImageProcessor.h  PaymentManager.h  ScannerManager.h
include/ui/: ConfirmationScreen.h  CreditPurchaseScreen.h  LogoScreen.h  MainWindow.h  PhoneInputScreen.h  ScanPromptScreen.h  TapToPayScreen.h
qml/: Main.qml  qml.qrc
qml/screens/: ConfirmationScreen.qml  CreditPurchaseScreen.qml  LogoScreen.qml  PhoneInputScreen.qml  ScanPromptScreen.qml  TapToPayScreen.qml
src/: AppController.cpp  AppSettings.cpp  AutoCrop.cpp  EmailManager.cpp  ImageProcessor.cpp  PaymentManager.cpp  ScannerManager.cpp  main.cpp
src/ui/: ConfirmationScreen.cpp  CreditPurchaseScreen.cpp  LogoScreen.cpp  MainWindow.cpp  PhoneInputScreen.cpp  ScanPromptScreen.cpp  TapToPayScreen.cpp
